<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_margin="5dp"
    android:layout_height="75dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:inputType="text"
                android:layout_marginLeft="15dp"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:inputType="text"
                android:id="@+id/user_name"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="2dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:inputType="textEmailAddress"
                android:id="@+id/user_email"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>